--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,15 @@
 on: [push]
 jobs:
   build-flutter-arm64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3
       - uses: uraimo/run-on-arch-action@v2
         name: Build Flutter
+        id: runcmd
         with: 
           arch: aarch64
-          distro: ubuntu_latest
+          distro: ubuntu18.04
           run: | 
             git clone -b master https://github.com/flutter/flutter.git
             cd flutter
