--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 on: [push]
 jobs:
   build-flutter-arm64:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: uraimo/run-on-arch-action@v2
@@ -9,7 +9,7 @@ jobs:
         id: runcmd
         with: 
           arch: aarch64
-          distro: ubuntu18.04
+          distro: ubuntu_latest
           dockerRunArgs: --platform linux/amd64
           run: | 
             git clone -b master https://github.com/flutter/flutter.git
