--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ on: [push]
 jobs:
   build-flutter-arm64:
     runs-on: ubuntu-latest
-    architectures: arm64
+    architecture: arm64
     steps:
       - uses: actions/checkout@v3
       - uses: uraimo/run-on-arch-action@v2
