--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,19 +1,14 @@
 on: [push]
 jobs:
   build-flutter-arm64:
-    runs-on: buildjet-2vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Build Flutter
         run: | 
-          git clone -b master https://github.com/flutter/flutter.git
-          cd flutter
-          export PATH="$PATH:$PWD/flutter:$PWD/bin"
-          ls
-          chmod +x *
-          flutter doctor
-          cd ..
-          env GZIP=-9 tar cvzf flutter.tar.gz flutter
+           curl -O https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.7.0-stable.tar.xz
+           tar -xvf flutter_linux_3.7.0-stable.tar.xz flutter/bin/cache/artifacts/engine/linux-x64/shader_lib
+           tar -zcvf flutter.tar.gz flutter/bin/cache/artifacts/engine/linux-x64/shader_lib 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
